
5.2b1 -> 5.3a1
    - jbj: gpsee: remove the --without-gpsee JS interpreter.
    - jbj: gpsee: use gpsee_{create,destroy}Interpreter() throughout RPM.
    - jbj: gpsee: convert the rest of the modules to use GPSEE module loading.
    - jbj: gpsee: convert the first 12 modules to use GPSEE module loading.
    - jbj: gpsee: install ~12 of the simpler and more standalone modules.
    - jbj: gpsee: add GPSEE_MODULE_WRAP to all JS modules.
    - jbj: gpsee: proof-of-concept for rpmbf module loading.
    - jbj: js: fix: external JS still needs to build in internal js subdir.
    - jbj: js: switch to linking external TraceMonkey (from GPSEE).
    - jbj: js: switch to linking external GPSEE (with added panic routine).
    - jbj: js: stub in sufficient AutoFu to build --with-gpsee=internal.
    - jbj: js: prepare to use GPSEE as embedded JS interpreter.
    - jbj: js: switch print method to use JS_FN (Fast Native) w/o a stack frame.
    - jbj: js: allow --with-js=/usr/lib:/usr/include/js w external TraceMonkey.
    - jbj: rpmdb: sync DB_CONFIG.in with what "make check" is using.
    - jbj: js: guesstimate a set of modules that might be portable/functional.
    - jbj: fts: fully initialize FTSENT (for JS use).
    - jbj: js: don't bother doing rpmts check/order/run if no elements.
    - jbj: rpmdb: fix: ensure that rpmdb pool allocations are set to zero.
    - jbj: tests: add a check-sign target w DSA/RSA coverage.
    - jbj: sign: fix: add a killref to plug a header memory leak.
    - jbj: tests: add a check-ACID target w db_tool coverage tests.
    - jbj: rpmdb: fix: reduce the scope of db->db_h caching optimization
	(multiple headerLoad's are avoided) so that non-existent secondary
	indices can be lazily rebuilt as needed.
    - afb: JS: use libjs 1.7.0 on FreeBSD.
    - jbj: tests: configure an rpmdb using DB_CONFIG with reasonable tuning.
    - jbj: add --with-db-sql.
    - jbj: permit building with db-4.7.25.
    - jbj: rpmfi: add a getter for _fnbf;